@@ -1,3 +1,9 @@
+2003-11-17  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-vfs-mime-magic:
+	* gnome-vfs.keys.in: added MPEG-4 audio detection and mime-type
+	(audio/x-m4a)
+
 2003-11-05  Bastien Nocera  <hadess@hadess.net>
 
 	* gnome-vfs.keys.in: added type audio/x-ms-asf (seems to be used
